[gd_scene load_steps=6 format=3 uid="uid://cdedwhmsht3ak"]

[ext_resource type="Script" path="res://Systems/ShooterGame/ShooterBox.gd" id="1_um3de"]
[ext_resource type="PackedScene" uid="uid://d2pbvppj3p7oa" path="res://Systems/Interaction/Interactable.tscn" id="2_xq3mo"]
[ext_resource type="PackedScene" uid="uid://j8kug6phefvd" path="res://Systems/ShooterGame/ShootingTarget.tscn" id="3_djl3m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vi2kl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g2qpj"]

[node name="ShooterBox" type="CSGBox3D"]
transform = Transform3D(1, 0, 0, -4.4409e-16, 1, 0, 0, 0, 1, -1.35759e-07, 0.5, -9.11062)
use_collision = true
size = Vector3(1, 0.5, 1)
material = SubResource("StandardMaterial3D_vi2kl")
script = ExtResource("1_um3de")

[node name="Interactable" parent="." instance=ExtResource("2_xq3mo")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
shape = SubResource("BoxShape3D_g2qpj")

[node name="ShootingTarget" parent="." instance=ExtResource("3_djl3m")]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, -3.35151, 0.5, -9.22354)

[node name="ShootingTarget2" parent="." instance=ExtResource("3_djl3m")]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 2.59943, 0.5, -11.0418)

[node name="ShootingTarget3" parent="." instance=ExtResource("3_djl3m")]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, -2.28691, 0.5, -12.7489)

[node name="ShootingTarget4" parent="." instance=ExtResource("3_djl3m")]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 1.28586, 0.5, -14.3849)

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
